--- a/theme.css
+++ b/theme.css
@@ -56,4 +56,4 @@
 /* ║ ⚠️ Do not comment out these lines! By disabling the theme can not work correctly.                         ║ */
 /* ╚═══════════════════════════════════════════════════════════════════════════════════════════════════════════╝ */
 
-@import "https://Nates-World-Community-Projects.github.io/POP-/src/source.css"; /* ⚠️ (Warning!! Do not disable it!) */
+@import url("https://Nates-World-Community-Projects.github.io/POP-/src/source.css"); /* ⚠️ (Warning!! Do not disable it!) */
