--- a/theme.css
+++ b/theme.css
@@ -1,14 +1,14 @@
 /* ╔═══════════════════════════════════════════════════════════════════════════════════════════════[─]═[□]═[×]═╗ */
 /* ║                                                Theme Info                                                 ║ */
 /* ╠══════════════════════════╦════════════════════════════════════════════════════════════════════════════════╣ */
-/* ║ Theme:                   ║ Native                                                                         ║ */
+/* ║ Theme:                   ║ POP!                                                                           ║ */
 /* ║ Version:                 ║ 1.0.0                                                                          ║ */
 /* ║ Author:                  ║ Nate's World#2102                                                              ║ */
 /* ║ Compatible Clients:      ║ BetterDiscord, Powercord & Stylus                                              ║ */
 /* ╠══════════════════════════╩════════════════════════════════════════════════════════════════════════════════╣ */
 /* ║                                               Description                                                 ║ */
 /* ╠═══════════════════════════════════════════════════════════════════════════════════════════════════════════╣ */
-/* ║ Native is an easily customizable Discord theme that customizes the Discord's appearance in a native Style.║ */
+/* ║ Pop is a theme that pops out elements of Discord's UI making them easy to read or just look really cool!  ║ */
 /* ║ This theme was created by Nate's World#2102.                                                              ║ */
 /* ╠═══════════════════════════════════════════════════════════════════════════════════════════════════════════╣ */
 /* ║                                                  Info                                                     ║ */
